--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -10,12 +10,21 @@
 
 
 <div class="container list">
+{{#list}}
     <div class="item">
-        <img src="images/festacompletabatizado.jpeg" class="item--image" />
-        <div class="item--name">Festa Completa Batizado</div>
-        <div class="item--genre">Gênero: Infantil</div>
+        <img src="images/{{image}}" class="item--image" />
+        <div class="item--name">{{name}}</div>
+        <div class="item--theme">Tema: {{theme}} </div>       
+        <div class="item--genre">Gênero: {{genre}}</div>
     </div>
+{{/list}}
+
+
+
    
+
+
+
 </div>
 
 {{>partials/footer}}
