--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,17 +68,12 @@ ul li:hover a {
 }
 
 .banner {
-  height: 400px;
+  width: 100%;
+  height: 450px;
   background: var(--lighter);
   background-size: cover;
   background-position: center;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--darkbg);
-  font-size: 36px;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px var(--lighter);
   margin-bottom: 30px;
 }
 
@@ -102,6 +97,7 @@ h2 {
   color: var(--lightbg);
 }
 .item--image {
+ max-height: 200px;
   width: 100%;
   height: auto;
   border-radius: 5px;
@@ -112,10 +108,9 @@ h2 {
   margin-bottom: 5px;
 }
 .item--type,
-.item--color,
+.item--theme,
 .item--genre {
   font-size: 13px;
-  color: var(--lighter);
   margin-bottom: 3px;
 }
 
@@ -142,8 +137,7 @@ footer {
 @media (max-width: 500px) {
   .banner {
       height: 200px;
-      font-size: 29px;
-  }
+    }
   h2 {
       font-size: 18px;
   }
