add-search/page404

--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -19,12 +19,11 @@
     </div>
 {{/list}}
 
-
-
-   
-
-
-
 </div>
 
+{{^list}}
+<div class="container no-list">
+    <h2>Produto não encontrado</h2>
+</div>
+{{/list}}
 {{>partials/footer}}
