--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -1,6 +1,26 @@
+<section>
+  <div class="contact">
+
+  <p>Nos acompanhe nas nossas redes sociais:</p>
+
+
+   <a href="https://www.instagram.com/personalizadosdeluxosm/" target="_blank" class="contact-adress col-md-6 col-lg-6 col-sm-12 col-xl-6 mx-auto mb-md-0 mb-6">
+    <img src="images/instagram.png" class="favicon" />
+    personalizadosdeluxosm
+  </a>
+
+  <a href="https://api.whatsapp.com/send/?phone=5537998208850&text&app_absent=0" target="_blank" class="contact-adress col-md-6 col-lg-6 col-sm-12 col-xl-6 mx-auto mb-md-0 mb-6">
+    <img src="images/whatsapp-icone-1.png" class="favicon" />
+    (37) 99820-8850
+  </a>
+
+</div>
+</section>
+
 <footer class="container">
-  Desenvolvido por Luana Moura
+  © Desenvolvido por Luana Moura
 </footer>
 
 </body>
+
 </html>
