--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -15,7 +15,7 @@
   <a href="/">   
      <img src="images/logo.jpeg" alt="" class="logo"></a>
         <form method="GET" action="/search">
-            <input type="search" name="q" placeholder="Pesquisar"  value="query"/>
+            <input type="search" name="q" placeholder="Pesquisar" value="{{query}}"/>
         </form>
     </div>
 </header>
